Fix `MemoryMappedFileAppender` buffer unmapping on JRE 9+
Closes #1646.